Fix text truncation bug
The fixed height can cause the text to be cut off in other languages

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -216,7 +216,7 @@ div[data-role=controlgroup] a.ui-btn-active {
 
 .localUsers .cardText-secondary {
     white-space: pre-wrap;
-    height: 3em;
+    min-height: 3em;
 }
 
 .customCssContainer textarea {
